# app/api/[...route]/route.ts
@@ -1,6 +1,7 @@
 import { Hono } from "hono";
 import { handle } from "hono/vercel";
 import todoLists from "./todo-lists";
+import todoItems from "./todo-items";
 import register from "./register";
 import verifyEmail from "./verify-email";
 import requestToken from "./request-token";
@@ -8,6 +9,7 @@ import requestToken from "./request-token";
 const app = new Hono().basePath("/api");
 
 app.route("/todo-lists", todoLists);
+app.route("/todo-items", todoItems);
 app.route("/register", register);
 app.route("/verify-email", verifyEmail);
 app.route("/request-token", requestToken);
