# lib/zod/schema/index.ts
@@ -1,5 +1,7 @@
 import { registerPostApiSchema } from "./register";
 import { requestTokenPostApiSchema } from "./request-token";
+import { todoItemsPostApiSchema } from "./todo-items";
+import { todoListGetApiSchema } from "./todo-lists";
 import { verifyEmailPostApiSchema } from "./verify-email";
 
 // APIパスを追加するごとに、この変数にzodスキーマを追加する
@@ -7,4 +9,6 @@ export const pathSchemas = [
   registerPostApiSchema,
   verifyEmailPostApiSchema,
   requestTokenPostApiSchema,
+  todoItemsPostApiSchema,
+  todoListGetApiSchema,
 ];
